...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/nav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

...

                            <ImageView
                                android:id="@+id/usc_map"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:adjustViewBounds="true"
                                android:contentDescription="@string/map"
                                app:srcCompat="@drawable/usc_map" />

                            <View
                                android:id="@+id/usc_map_esh"
                                android:layout_width="90dp"
                                android:layout_height="45dp"
...
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/report_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/nav"
...
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/nav"
...
                    android:orientation="vertical"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/notification_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/nav"
...
        android:visibility="gone"
        android:orientation="vertical" >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/notifications_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>
    </LinearLayout>

...
            android:backgroundTint="@color/cardinal_selected"
            android:src="@android:drawable/ic_dialog_map"
            android:layout_weight="1"
            app:tint="@color/gold" />

        <ImageButton
            android:id="@+id/report"
            android:contentDescription="@string/report"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@color/cardinal"
            android:backgroundTint="@color/cardinal"
            android:src="@drawable/ic_report_icon_fill"
            android:layout_weight="1"
            app:tint="@color/gold" />

        <ImageButton
            android:id="@+id/profile"
            android:contentDescription="@string/profile"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@color/cardinal"
            android:backgroundTint="@color/cardinal"
            android:src="@drawable/ic_person_fill"
            android:layout_weight="1"
            app:tint="@color/gold" />

        <ImageButton
            android:id="@+id/notification"
            android:contentDescription="@string/notification"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@color/cardinal"
            android:backgroundTint="@color/cardinal"
            android:src="@android:drawable/stat_notify_chat"
            android:layout_weight="1"
            app:tint="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/log_in_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
